fix wide cards overflow in `row-card` class

--- a/src/scss/ui/_grid.scss
+++ b/src/scss/ui/_grid.scss
@@ -58,6 +58,7 @@
 .row-cards {
   --#{$variable-prefix}gutter-x: #{$cards-grid-gap};
   --#{$variable-prefix}gutter-y: #{$cards-grid-gap};
+  min-width: 0;
 
   .row-cards {
     flex: 1;
